crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__fstring_escaped_newline.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..8,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    value: FStringValue {
                        inner: Single(
                            FString {
                                range: 0..8,
                                node_index: NodeIndex(None),
                                elements: [
                                    Literal(
                                        InterpolatedStringLiteralElement {
                                            range: 2..4,
                                            node_index: NodeIndex(None),
                                            value: "\n",
                                        },
                                    ),
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 4..7,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 5..6,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: None,
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                ],
                                flags: FStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
