crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__invalid_unicode_literal.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: error
---
ParseError {
    error: Lexical(
        UnicodeError,
    ),
    location: 4..6,
}
